--- a/unpackaged/main/default/classes/DataMigrationBatchTest.cls
+++ b/unpackaged/main/default/classes/DataMigrationBatchTest.cls
@@ -1,9 +1,13 @@
 /**
- * @description       : 
- * @author            : ChangeMeIn@UserSettingsUnder.SFDoc
+ * @description       : Catch up of content TEST class
+ * @author            : BADER EDDINE ELKHAL
  * @group             : 
  * @last modified on  : 11-17-2021
  * @last modified by  : BADER EDDINE ELKHAL
+ * @last modified on  : 20-02-2023
+ * @last modified by  : Paul Louis MONY
+ * @last modification : Modify the test method due to modification of the batch helper, which do not take ContactPointEmails SubQuery anymore, add a method to test custom query batch launch + API VERSION Upgrade to 57
+ * 
 **/
 @isTest
 private class DataMigrationBatchTest {
@@ -13,6 +17,40 @@ private class DataMigrationBatchTest {
         List<Account> accounts = new List<Account>();
         List<Individual> individuals  = new List<Individual>();
         List<ContactPointEmail> contactPointEmails = new List<ContactPointEmail>();
+        /*
+         * Data for DataModel B2C :
+         * 1. Create EngagementChannelType 
+         * 2. Create CommSubscription 
+         * 3. Create Channel Type
+         */
+        EngagementChannelType engagementType = new EngagementChannelType(Name = 'Website', CurrencyIsoCode = 'EUR');
+        insert engagementType;
+        List<CommSubscription> subType = new List<CommSubscription>();
+        subType.add(new CommSubscription(Name = 'Newsletter', CurrencyIsoCode = 'EUR'));
+        subType.add(new CommSubscription(Name = 'BackInStock_SKU_123', CurrencyIsoCode = 'EUR'));
+        subType.add(new CommSubscription(Name = 'SpecialEvent_B', CurrencyIsoCode = 'EUR'));
+        subType.add(new CommSubscription(Name = 'BackInStock_SKU_345', CurrencyIsoCode = 'EUR'));
+        subType.add(new CommSubscription(Name = 'SpecialEvent_A', CurrencyIsoCode = 'EUR'));
+        insert subType;
+        Map<String,CommSubscription> CommSubscriptionMap = new  Map<String,CommSubscription>();
+        for(CommSubscription aCS : subType){
+            CommSubscriptionMap.put(aCS.Name, aCS);
+        }
+        List<CommSubscriptionChannelType> consentTypes = new List<CommSubscriptionChannelType>();
+        consentTypes.add(new CommSubscriptionChannelType(Name = 'Newsletter', 
+                                                         CurrencyIsoCode = 'EUR', 
+                                                         CommunicationSubscriptionId = CommSubscriptionMap.get('Newsletter').Id, 
+                                                         EngagementChannelTypeId = engagementType.Id));
+        consentTypes.add(new CommSubscriptionChannelType(Name = 'BackInStock', 
+                                                         CurrencyIsoCode = 'EUR', 
+                                                         CommunicationSubscriptionId = CommSubscriptionMap.get('BackInStock_SKU_345').Id, 
+                                                         EngagementChannelTypeId = engagementType.Id));
+        consentTypes.add(new CommSubscriptionChannelType(Name = 'SpecialEvent', 
+                                                         CurrencyIsoCode = 'EUR', 
+                                                         CommunicationSubscriptionId = CommSubscriptionMap.get('SpecialEvent_A').Id, 
+                                                         EngagementChannelTypeId = engagementType.Id));
+
+        insert consentTypes;
         //insert 5 individualS
         for(Integer i=1;i<=10;i++){
             Individual individual = new Individual();
@@ -107,9 +145,9 @@ private class DataMigrationBatchTest {
         conpointtypecons3.PartyId = accounts.get(8).PersonIndividualId;
         conpointtypecons3.ContactPointType = 'Email';
         conpointtypecons3.PrivacyConsentStatus = 'OptIn';
-        conpointtypecons3.EffectiveFrom = accounts.get(8).LastUpdateOptinEmailing__pc.Date();
+        conpointtypecons3.EffectiveFrom = accounts.get(8).LastUpdateOptinEmailing__pc.Date().addDays(-2);
         conpointtypecons3.EffectiveTo = null;
-        conpointtypecons3.CaptureDate = accounts.get(8).LastUpdateOptinEmailing__pc.Date();
+        conpointtypecons3.CaptureDate = accounts.get(8).LastUpdateOptinEmailing__pc.Date().addDays(-2);
         conpointtypecons3.CaptureContactPointType = 'Web';
         conpointtypecons3.CaptureSource = 'Test source';
         conpointtypecons3.DoubleConsentCaptureDate = null;
@@ -152,7 +190,7 @@ private class DataMigrationBatchTest {
         System.debug(account.LastUpdateOptinEmailing__pc+' AND '+listConsPoints.get(1).EffectiveFrom);
         System.assertEquals(account.LastUpdateOptinEmailing__pc, listConsPoints.get(1).EffectiveFrom);
     }  
-    @isTest static void testScondRun() {
+    @isTest static void testSecondRun() {
         //DataMigrationBatchTest.setup();
         if(DataMigrationBatchTest.isTrue==false){
             DataMigrationBatchTest.setup();
@@ -193,6 +231,25 @@ private class DataMigrationBatchTest {
         
         System.assertEquals(false, listpoinytCons.isEmpty());
         
+        
+    }
+    @isTest static void testQueryRun() {
+        //DataMigrationBatchTest.setup();
+        
+        String query = 'SELECT id,LastUpdateOptinEmailing__pc, OptinEmailing__pc, PersonIndividualId, LastName, Salutation, PersonBirthdate, PersonEmail, Country__pc, WebsiteLocale__pc, WebsiteCountry__pc, CreatedDate, PersonContactId';
+        query += ' FROM Account WHERE PersonEmail != null AND IsPersonAccount = true and optinEmailing__pc = true and LastUpdateOptinEmailing__pc != null';
+        if(DataMigrationBatchTest.isTrue==false){
+            DataMigrationBatchTest.setup();
+        }
+        Test.startTest();
+        DataMigrationBatch batchReg = new DataMigrationBatch(query);
+		Id idB = Database.executeBatch(batchReg);
+        Test.stopTest();
+        
+        List<ContactPointConsent> listpoinytCons = [SELECT Id, Name FROM ContactPointConsent 
+                                                    WHERE Name = 'Newsletter-Subscription' AND PrivacyConsentStatus = 'OptIn'];
+        
+        System.assertEquals(false, listpoinytCons.isEmpty());       
         
     }
  }
